--- a/page2.html
+++ b/page2.html
@@ -59,17 +59,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="assests/BirdMan1.png" alt="Norway" style="width:100%">
+      <img src="assests/SpiderWoman1.png" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="assests/BirdMan2.png" alt="Norway" style="width:100%">
+      <img src="assests/SpiderWoman2.png" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="assests/BirdMan3.png" alt="Norway" style="width:100%">
+      <img src="assests/SpiderWoman3.png" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
               </div>
     </div>
@@ -78,17 +78,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="assests/BraveNewRetriever.png" alt="Norway" style="width:100%">
+      <img src="assests/StormOfTheGoldenRetriever.png" alt="Norway" style="width:100%">
       <div class="w3-container w3-white">
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="assests/Revolver1.png" alt="Norway" style="width:100%">
+      <img src="" alt="" style="width:100%">
       <div class="w3-container w3-white">
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="assests/Revolver2.png" alt="Norway" style="width:100%">
+      <img src="" alt="" style="width:100%">
       <div class="w3-container w3-white">
       </div>
     </div>
@@ -97,11 +97,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
     <div class="w3-bar">
-      <a href="#" class="w3-bar-item w3-black w3-button">1</a>
-      <a href="page2.html" class="w3-bar-item w3-button w3-hover-black">2</a>
+      <a href="index.html" class="w3-bar-item w3-button w3-hover-black">«</a>
+      <a href="index.html" class="w3-bar-item w3-hover-black w3-button">1</a>
+      <a href="#" class="w3-bar-item w3-button w3-black w3-hover-black">2</a>
       <!-- <a href="#" class="w3-bar-item w3-button w3-hover-black">3</a>
       <a href="#" class="w3-bar-item w3-button w3-hover-black">4</a> -->
-      <a href="page2.html" class="w3-bar-item w3-button w3-hover-black">»</a>
     </div>
   </div>
 
@@ -115,16 +115,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
   </div> -->
 
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+  <!-- <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
-    <p>Hi! I'm Zoey, a creative visual artist with a passion for digital media and storytelling. I’ve worked with a variety of tools including Photoshop, Unreal Engine 5, and Blender, which have helped me bring imaginative concepts to life through 3D modeling, environment design, and digital art. I also have a background in photography, which has given me a strong eye for composition, lighting, and visual aesthetics.
-
-      I studied Game Development and Creative Media at City College Southampton, where I developed my technical skills and expanded my creative toolkit. Whether I'm designing virtual worlds or capturing moments through a lens, I'm always driven by a desire to create meaningful and visually compelling work.</p>
+    <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
     <hr>
     
-    <h4>Technical Skills</h4>
+    <h4>Technical Skills</h4> -->
     <!-- Progress bars / Skills -->
-    <p>Photography</p>
+    <!-- <p>Photography</p>
     <div class="w3-grey">
       <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:60%">60%</div>
     </div>
@@ -144,7 +142,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </button>
     </a>
     </center>
-    </p>
+    </p> -->
     <hr>
     
     <!-- <h4>How much I charge</h4> -->
